--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bhuvanam-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Bhuvanams1696.github.io",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
